--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/image": "^1.10.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "@vueuse/core": "^12.4.0",
@@ -20,6 +21,7 @@
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-vue": "^8.5.2",
     "gsap": "^3.12.7",
+    "ipx": "^3.0.3",
     "lenis": "^1.1.19",
     "lucide-vue-next": "^0.473.0",
     "nuxt": "^3.15.0",
